--- a/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--Homepwner-->
         <scene sceneID="VLX-2m-Ema">
             <objects>
                 <tableViewController id="Bdx-oa-VlG" customClass="ItemsViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
@@ -14,38 +14,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="kbS-kM-oLG">
-                            <rect key="frame" x="0.0" y="64" width="600" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iXv-3X-TLe">
-                                    <rect key="frame" x="299" y="15" width="288" height="30"/>
-                                    <state key="normal" title="Add"/>
-                                    <connections>
-                                        <action selector="addNewItem:" destination="Bdx-oa-VlG" eventType="touchUpInside" id="Up4-XY-adb"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0IN-ln-djQ">
-                                    <rect key="frame" x="8" y="15" width="288" height="30"/>
-                                    <state key="normal" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="Bdx-oa-VlG" eventType="touchUpInside" id="gpc-81-2kh"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstItem="iXv-3X-TLe" firstAttribute="leading" secondItem="0IN-ln-djQ" secondAttribute="trailing" constant="8" id="7CM-kA-Mfc"/>
-                                <constraint firstItem="iXv-3X-TLe" firstAttribute="width" secondItem="0IN-ln-djQ" secondAttribute="width" id="TV8-Uz-pCL"/>
-                                <constraint firstItem="iXv-3X-TLe" firstAttribute="centerY" secondItem="kbS-kM-oLG" secondAttribute="centerY" id="cpI-jv-cg0"/>
-                                <constraint firstItem="0IN-ln-djQ" firstAttribute="leading" secondItem="kbS-kM-oLG" secondAttribute="leading" constant="8" id="loh-JX-YuE"/>
-                                <constraint firstAttribute="trailing" secondItem="iXv-3X-TLe" secondAttribute="trailing" constant="8" id="mFx-p3-fDG"/>
-                                <constraint firstItem="0IN-ln-djQ" firstAttribute="centerY" secondItem="kbS-kM-oLG" secondAttribute="centerY" id="sqj-No-430"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="65" id="tgl-yu-bS7" customClass="ItemCell" customModule="Homepwner" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="152" width="600" height="65"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tgl-yu-bS7" id="YxE-zS-hfU">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="64.5"/>
@@ -93,7 +64,13 @@
                             <outlet property="delegate" destination="Bdx-oa-VlG" id="tZC-8m-eBU"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="K2n-gR-WvX"/>
+                    <navigationItem key="navigationItem" title="Homepwner" id="K2n-gR-WvX">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qJL-M7-kMb">
+                            <connections>
+                                <action selector="addNewItem:" destination="Bdx-oa-VlG" id="fKi-ji-0oB"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P3J-L0-Wm6" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <barButtonItem title="Item" id="ZtN-BX-mpR"/>
@@ -128,8 +105,15 @@
                                                 <rect key="frame" x="53" y="0.0" width="507" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="QMT-f7-eLG" id="nUO-tV-6yy"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="fmt-PS-jgf" appends="YES" id="Krh-iy-bn6"/>
+                                        </connections>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zf9-UZ-0ex">
                                         <rect key="frame" x="0.0" y="38" width="560" height="30"/>
@@ -144,8 +128,15 @@
                                                 <rect key="frame" x="51" y="0.0" width="509" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="QMT-f7-eLG" id="eYa-lo-Ihe"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="fmt-PS-jgf" appends="YES" id="JMN-e0-Abe"/>
+                                        </connections>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ekK-ZH-H1p">
                                         <rect key="frame" x="0.0" y="76" width="560" height="30"/>
@@ -160,14 +151,21 @@
                                                 <rect key="frame" x="50" y="0.0" width="510" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="QMT-f7-eLG" id="WVy-td-2xd"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b7M-xH-5UF">
                                         <rect key="frame" x="0.0" y="114" width="560" height="406"/>
+                                        <gestureRecognizers/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="fmt-PS-jgf" appends="YES" id="qEE-gN-4PM"/>
+                                        </connections>
                                     </label>
                                 </subviews>
                                 <constraints>
@@ -177,12 +175,16 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="hCf-pO-AuT" secondAttribute="trailing" id="4t8-NT-E5A"/>
                             <constraint firstItem="Jkh-TJ-20e" firstAttribute="top" secondItem="hCf-pO-AuT" secondAttribute="bottom" constant="8" id="W5g-CM-ky7"/>
                             <constraint firstItem="hCf-pO-AuT" firstAttribute="top" secondItem="qZg-FL-uij" secondAttribute="bottom" constant="8" id="nCP-i9-vLd"/>
                             <constraint firstItem="hCf-pO-AuT" firstAttribute="leading" secondItem="RoC-Ad-ZfK" secondAttribute="leadingMargin" id="tfT-Jm-YED"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="fmt-PS-jgf" appends="YES" id="uKw-qP-cCS"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="b7M-xH-5UF" id="H7a-T3-P7n"/>
@@ -192,6 +194,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MmZ-jE-uge" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="fmt-PS-jgf">
+                    <connections>
+                        <action selector="buttonTapped:" destination="QMT-f7-eLG" id="l0v-fh-rxQ"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1356" y="-950"/>
         </scene>
