--- a/Photorama/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Photorama/Base.lproj/Main.storyboard
@@ -91,15 +91,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nvY-IY-Hgs">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="556" id="87t-2k-ivl"/>
+                                </constraints>
                             </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gh-nT-rpX">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem title="Tags" id="Pvf-JR-d7o">
+                                        <connections>
+                                            <segue destination="Sz0-9q-LRr" kind="presentation" identifier="ShowTags" id="4UY-Ai-39G"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="leading" secondItem="RB6-y4-Uwo" secondAttribute="leading" id="Jdw-lo-Q9X"/>
-                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="top" secondItem="RB6-y4-Uwo" secondAttribute="top" id="MUv-aU-Wa3"/>
-                            <constraint firstAttribute="bottom" secondItem="nvY-IY-Hgs" secondAttribute="bottom" id="Paz-B2-t21"/>
-                            <constraint firstAttribute="trailing" secondItem="nvY-IY-Hgs" secondAttribute="trailing" id="Pjl-UJ-GUX"/>
+                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="leading" secondItem="4gh-nT-rpX" secondAttribute="leading" id="bE9-uD-Qju"/>
+                            <constraint firstAttribute="trailing" secondItem="nvY-IY-Hgs" secondAttribute="trailing" id="bIm-ZZ-1ml"/>
+                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="leading" secondItem="RB6-y4-Uwo" secondAttribute="leading" id="bz7-PD-3Vd"/>
+                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="trailing" secondItem="4gh-nT-rpX" secondAttribute="trailing" id="gL6-ux-gju"/>
+                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="bottom" secondItem="4gh-nT-rpX" secondAttribute="top" id="qI1-qP-esh"/>
+                            <constraint firstItem="nvY-IY-Hgs" firstAttribute="top" secondItem="RB6-y4-Uwo" secondAttribute="top" id="xtf-ep-NzI"/>
                         </constraints>
                     </view>
                     <connections>
@@ -109,6 +124,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IKu-Uj-SUi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1387" y="-377"/>
+        </scene>
+        <!--Tags-->
+        <scene sceneID="FLb-4f-Cs5">
+            <objects>
+                <tableViewController id="Adl-hr-UE4" customClass="TagsViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="bpq-5B-AYq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="vYo-7d-e8B" style="IBUITableViewCellStyleDefault" id="9Bx-ne-Gv7">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9Bx-ne-Gv7" id="gTH-0g-1gC">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vYo-7d-e8B">
+                                            <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Adl-hr-UE4" id="g3f-CL-xnq"/>
+                            <outlet property="delegate" destination="Adl-hr-UE4" id="mRp-3k-Qvh"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Tags" id="dCx-gd-up5">
+                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="done" id="8Ke-BE-NNe">
+                            <connections>
+                                <action selector="done:" destination="Adl-hr-UE4" id="X3c-O3-suy"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="t7H-lV-8Xh">
+                            <connections>
+                                <action selector="addNewTag:" destination="Adl-hr-UE4" id="SuB-6W-b25"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ae6-56-bRl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2207" y="377"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="10n-T6-Bef">
+            <objects>
+                <navigationController id="Sz0-9q-LRr" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gc6-1X-0QL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Adl-hr-UE4" kind="relationship" relationship="rootViewController" id="BrL-gn-QKI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6RF-Py-cRR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1387" y="377"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="U8a-F3-y2J">
